--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,12 @@
 # Site settings
 title: EDISON&JENNY
 email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: "hello"
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 # User setting
-owner: Start Bootstrap
+owner: Edison
 email: name@example.com
 facebook_username: example
 twitter_username: example
